[package]
name = "wagyu_bolt"
version = "0.1.0"
authors = ["Bolt Labs, Inc <info@boltlabs.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/boltlabs-inc/wagyu_bolt"
license = "MIT License"

[dependencies]
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
ff = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
pairing = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
wagyu-model = "0.6.1"
wagyu-ethereum = { git = "https://github.com/ArgusHQ/wagyu", branch = "feature/transactions" }
wagyu-zcash = { git = "https://github.com/ArgusHQ/wagyu", branch = "feature/zcash-transactions" }

# [lib]
# crate-type = ["lib", "cdylib"]
